<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordyTime</string>
    <string name="welcome">What time is it?\nWORDYTIME, YA\'LL.</string>
    <string name="action_settings">Settings</string>
    <string name="WordyTime">WordyTime!</string>
    <string name="instructions">Make as many anagram substrings as you can out of the given word</string>
    <string name="score">0</string>
    <string name="scoreName">Score:</string>
    <string name="title_activity_wordy_time_menu">wordyTimeMenu</string>
    <string name="play">New Game</string>
    <string name="instructionsButton">Resume Game</string>
    <string name="menuButton">Menu</string>
    <string name="currentWord">Large Text</string>
    <string name="newWordButton">New word</string>

</resources>
